Server modified for shop management. Routing added in accordance with MVC(Partially). Public folder made for static routing.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Making Node server with the help of EpressJS.",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4"
   },
   "devDependencies": {
