--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "mongodb": "^3.2.3",
+    "mongoose": "^5.5.2",
     "pug": "^2.0.3"
   },
   "devDependencies": {
